# guided-scdv

./: README.md  setup.cfg
.github/workflows/: python-package.yml
guided_scdv/: __init__.py  document.py  gmm.py  word_embedding.py
tests/: test_documents.py
