[metadata]
name = guided-scdv
version = attr: guided_scdv.__version__.__version__
url = https://github.com/taijest/guided-scdv
author = Taiju Hosaka
author_email = taihosaka@gmail.com
license_file = LICENSE
description = guided-scdv: SCDV with Guided GMM
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires = 
  numpy; python_version == "1.20.1"
  gensim; python_version == "3.8.3"
